--- a/package.json
+++ b/package.json
@@ -1,38 +1,23 @@
 {
-  "name": "sain-saveur",
-  "version": "0.1.0",
+  "name": "sain-saveur-project",
+  "version": "1.0.0",
+  "main": "index.js",
   "private": true,
+  "repository": "git@github.com:HugoD66/Sain-Saveur.git",
+  "author": "HugoD66 <dessauw.hugo@gmail.com>",
+  "license": "MIT",
+  "workspaces": [
+    "server",
+    "client"
+  ],
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "startd": "cd server && docker-compose up -d",
+    "startf": "cd client && npm start",
+    "format:fix": "prettier --ignore-unknown --write .",
+    "lint:fix": "eslint --fix ."
   }
 }
