--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,12 +1,20 @@
 version: "3"
+
 services:
   redis:
     image: redis:latest
     ports:
-      - 6379:6379
+      - 6380:6379
+
   redisinsight:
     image: redislabs/redisinsight:1.14.0
     ports:
-      - 8001:8001
+      - 8002:8001
     volumes:
       - ./redisinsight:/db
+
+  sqlite:
+    image: alpine
+    volumes:
+      - ./sqlite:/db
+    command: sh -c "apk add --no-cache sqlite && sqlite3 /db/database.db"
