--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "scripts": {
     "startd": "cd server && docker-compose up -d",
+    "stopd":"cd server && docker-compose down",
     "startf": "cd client && yarn start",
+    "starts": "cd server && node server.js",
     "format:fix": "prettier --ignore-unknown --write .",
     "lint:fix": "eslint --fix .",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
