--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
