--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "redis": "^4.6.13",
     "sqlite3": "^5.1.7"
   },
   "proxy": "http://localhost:5000"
