--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "redis": "^4.6.13",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "typescript": "^5.3.3"
   },
   "proxy": "http://localhost:5000"
 }
