--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "stopd":"cd server && docker-compose down",
     "startf": "cd client && yarn start",
     "starts": "cd server && node server.js",
+    "startd:clean": "cd server && docker-compose up -d --force-recreate",
     "format:fix": "prettier --ignore-unknown --write .",
     "lint:fix": "eslint --fix .",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
