--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@types/redis": "^4.0.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "install": "^0.13.0",
     "redis": "^4.6.13",
     "sqlite3": "^5.1.7",
     "typescript": "^5.3.3"
