Add Redis, console.log() on createRecipe

--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "startd": "cd server && docker-compose up -d",
     "stopd": "cd server && docker-compose down",
     "startf": "cd client && yarn start",
-    "starts": "cd server && node server.js",
+    "starts": "cd server && npm-run-all --parallel start:server start:subscribe",
     "startd:clean": "cd server && docker-compose up -d --force-recreate",
     "format:fix": "prettier --ignore-unknown --write .",
     "lint:fix": "eslint --fix .",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+
+    "start:server": "node server/server.js",
+    "start:subscribe": "node server/calls/subscribeOnCreateRecipe.js",
+    "starts:all": "cd server && node server.js"
   },
   "proxy": "http://localhost:5000"
 }
