--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,19 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@types/ioredis": "^5.0.0",
     "@types/redis": "^4.0.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "install": "^0.13.0",
+    "ioredis": "^5.3.2",
     "redis": "^4.6.13",
     "sqlite3": "^5.1.7",
     "typescript": "^5.3.3"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
