--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "client"
   ],
   "dependencies": {
+    "@trendyol-js/react-carousel": "^3.0.2",
+    "aos": "^2.3.4",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "startd": "cd server && docker-compose up -d",
@@ -24,6 +28,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.13",
     "webpack-cli": "^5.1.4"
   }
 }
