Migration part 1 SQLite->Mongo, change callRecipes

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,6 @@ REDIS_PORT=6380
 REDIS_INSIGHT_PORT=8002
 SQLITE_DB_PATH=./sqlite
 SQLITE_DB=./database.db
+
+MONGODB_URI="mongodb://mongoadmin:secret@localhost:27017/mydbname"
+DB_NAME=mydbname
