--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "express": "^4.18.3",
     "install": "^0.13.0",
     "ioredis": "^5.3.2",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
     "redis": "^4.6.13",
     "sqlite3": "^5.1.7",
     "typescript": "^5.3.3"
