--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -7,3 +7,8 @@ services:
       - 27017:27017
     volumes:
       - ./mongo-data:/data/db
+    healthcheck:
+      test: [ "CMD", "mongo", "--eval", "db.runCommand('ping').ok" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
