--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,7 +8,23 @@ services:
     volumes:
       - ./mongo-data:/data/db
     healthcheck:
-      test: [ "CMD", "mongo", "--eval", "db.runCommand('ping').ok" ]
+      test: ["CMD", "mongo", "--eval", "db.runCommand('ping').ok"]
       interval: 30s
       timeout: 10s
       retries: 5
+
+  redis:
+    image: redis:latest
+    ports:
+      - 6380:6379
+    depends_on:
+      - mongo
+
+  redisinsight:
+    image: redislabs/redisinsight:1.14.0
+    ports:
+      - 8002:8001
+    volumes:
+      - ./redisinsight:/db
+    depends_on:
+      - redis
