--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "dependencies": {
     "@trendyol-js/react-carousel": "^3.0.2",
-    "aos": "^2.3.4",
+    "aos": "^3.0.0-beta.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -28,6 +28,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/react-slick": "^0.23.13",
     "webpack-cli": "^5.1.4"
   }
