--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   ],
   "dependencies": {
     "@trendyol-js/react-carousel": "^3.0.2",
+    "@types/react-router-dom": "^5.3.3",
     "aos": "^3.0.0-beta.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3"
   },
   "scripts": {
     "startd": "cd server && docker-compose up -d",
