--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start:subscribe": "node server/calls/subscribeOnCreateRecipe.js",
     "starts:all": "cd server && node server.js"
   },
-  "proxy": "http://localhost:4700",
+  "proxy": "http://127.0.0.1:4700",
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/react-slick": "^0.23.13",
