--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -46,5 +47,6 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "eslint-config-react-app": "^7.0.1"
-  }
+  },
+  "proxy": "http://localhost:4700"
 }
