--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.13",
+    "socket.io": "^4.7.5",
     "sqlite3": "^5.1.7",
     "typescript": "^5.3.3"
   },
