--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-/server/mongo-data/**
+# /server/mongo-data/**
 # dependencies
 /node_modules
 **/node_modules
