--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "redis": "^4.6.13",
     "socket.io": "^4.7.5",
     "sqlite3": "^5.1.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "proxy": "http://localhost:4700",
   "devDependencies": {
