--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.5"
   },
   "scripts": {
     "startd": "cd server && docker-compose up -d",
@@ -39,6 +41,9 @@
   "proxy": "http://127.0.0.1:4700",
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "webpack-cli": "^5.1.4"
   }
